# generfstudio

./: README.md  environment.yml  pyproject.toml
config/: mv-diffusion-512.yaml  mv-diffusion.yaml
generfstudio/: adamw_8bit_optimizer_config.py  adamw_optimizer_config.py  generfstudio_constants.py  generfstudio_data_config.py  generfstudio_method_config.py  generfstudio_utils.py  pose_utils.py  zero_redundancy_optimizer_config.py
generfstudio/data/datamanagers/: neighboring_views_datamanager.py  union_datamanager.py  updating_full_images_datamanager.py
generfstudio/data/dataparsers/: co3d_dataparser.py  dataparser_utils.py  depth_providing_dataparser.py  dl3dv_dataparser.py  dtu_dataparser.py  gaussian_optimizer.py  llff_dataparser.py  mipnerf_dataparser.py  mvimgnet_dataparser.py  objaverse_xl_dataparser.py  r10k_dataparser.py  sds_dataparser.py
generfstudio/data/datasets/: masked_dataset.py  neighboring_views_dataset.py  union_dataset.py
generfstudio/diffusion/: stable_zero123.py
generfstudio/fields/: batched_pc_optimizer.py  depth_estimator_field.py  dino_v2_encoder.py  dust3r_field.py  ema_model.py  feature_volume_encoder.py  ibrnet_field.py  image_encoder.py  pixelnerf_field.py  resnet_fc.py  spatial_encoder.py  unet.py
generfstudio/models/: depth_gaussians.py  mv_diffusion.py  nerfacto_sds.py  nerfacto_sds_bak.py  nerfacto_sds_text.py  pixelnerf.py  pixelnerf_base_model.py  pixelnerf_model.py  pixelnerf_occupancy_model.py  rgbd_diffusion.py  rgbd_diffusion_base.py  rgbd_diffusion_if.py  sds_model_base.py  splatfacto_sds.py
generfstudio/pixelnerf_utils/: pdf_and_depth_sampler.py  scaled_nerf_encoding.py
generfstudio/samplers/: pynerf_vol_sampler.py
