[project]
name = "generfstudio"
version = "0.1.0"

dependencies=[
    "nerfstudio>=1.0.0",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["extern*", "generfstudio*"]

[project.entry-points."nerfstudio.method_configs"]
nerfacto_sds = "generfstudio.generfstudio_method_config:nerfacto_sds_method"
splatfacto_sds = "generfstudio.generfstudio_method_config:splatfacto_sds_method"
pixelnerf = "generfstudio.generfstudio_method_config:pixelnerf_method"
mv_diffusion = "generfstudio.generfstudio_method_config:mv_diffusion_method"
mv_diffusion_union = "generfstudio.generfstudio_method_config:mv_diffusion_union_method"
mv_diffusion_ddp = "generfstudio.generfstudio_method_config:mv_diffusion_ddp_method"
mv_diffusion_union_ddp = "generfstudio.generfstudio_method_config:mv_diffusion_union_ddp_method"

[project.entry-points."nerfstudio.dataparser_configs"]
co3d-data = "generfstudio.generfstudio_data_config:co3d_dataparser"
dl3dv-data = "generfstudio.generfstudio_data_config:dl3dv_dataparser"
dtu-data = "generfstudio.generfstudio_data_config:dtu_dataparser"
mvimgnet-data = "generfstudio.generfstudio_data_config:mvimgnet_dataparser"
r10k-data = "generfstudio.generfstudio_data_config:r10k_dataparser"
sds-data = "generfstudio.generfstudio_data_config:sds_dataparser"
