[project]
name = "generfstudio"
version = "0.1.0"

dependencies=[
    "nerfstudio>=1.0.0",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["extern*", "generfstudio*"]

[project.entry-points."nerfstudio.method_configs"]
depth_gaussians = "generfstudio.generfstudio_method_config:depth_gaussians_method"
rgbd_diffusion = "generfstudio.generfstudio_method_config:rgbd_diffusion_method"
rgbd_diffusion_union = "generfstudio.generfstudio_method_config:rgbd_diffusion_union_method"
rgbd_diffusion_ddp = "generfstudio.generfstudio_method_config:rgbd_diffusion_ddp_method"
rgbd_diffusion_union_ddp = "generfstudio.generfstudio_method_config:rgbd_diffusion_union_ddp_method"
rgbd_diffusion_if = "generfstudio.generfstudio_method_config:rgbd_diffusion_if_method"
rgbd_diffusion_if_union = "generfstudio.generfstudio_method_config:rgbd_diffusion_if_union_method"
rgbd_diffusion_if_union_ddp = "generfstudio.generfstudio_method_config:rgbd_diffusion_if_union_ddp_method"

[project.entry-points."nerfstudio.dataparser_configs"]
co3d-data = "generfstudio.generfstudio_data_config:co3d_dataparser"
dl3dv-data = "generfstudio.generfstudio_data_config:dl3dv_dataparser"
dp-data = "generfstudio.generfstudio_data_config:depth_providing_dataparser"
dtu-data = "generfstudio.generfstudio_data_config:dtu_dataparser"
llff-data = "generfstudio.generfstudio_data_config:llff_dataparser"
mvimgnet-data = "generfstudio.generfstudio_data_config:mvimgnet_dataparser"
oxl-data = "generfstudio.generfstudio_data_config:oxl_dataparser"
r10k-data = "generfstudio.generfstudio_data_config:r10k_dataparser"
